fix(Search): hide collapse header

--- a/src/components/contacts/Search.scss
+++ b/src/components/contacts/Search.scss
@@ -127,6 +127,7 @@
 }
 
 .ant-collapse > .ant-collapse-item > .ant-collapse-header {
+  height: 0;
   padding: 0;
   overflow: hidden;
   border: none !important;
